# broai-research-rocket

./: .env.swp  .gitignore  .gitignore.swp  README.md  api.py  debug.ipynb  dev.ipynb  dev_api.ipynb  dev_celery.ipynb  docker-compose.yml  export-aws-env.sh  frontend.py  generate.env.ps1  get_credentials.py  home.py  main.py  pyproject.toml  research-rocket.db  test_searxng.ipynb  web_list.db
_deprecated/_pages/: 2_outline.py  4_summary.py
_deprecated/pages/: test_page1.py  test_page2.py
_frontend/: package-lock.json  package.json
_frontend/app/: page.tsx
_frontend/components/: SessionCard.tsx
_frontend/hooks/: useAuthStore.ts
_frontend/services/: authService.ts  sessionService.ts
_searxng-docker/: HowToRun.md  dev_searxng.ipynb
agents/: blog_writer.py  context_compressor.py  outline_generator.py
backend/: api.py  debug.ipynb  dev_api.ipynb  dev_auto_gen_outline.ipynb  dev_whitelist.ipynb  pyproject.toml
backend/agents/: blog_writer.py  context_compressor.py  context_compressor_example.py  outline_generator.py
blogs/: bro_or_not.md  from_zero_to_data_scientist.md  game_is_just_not_for_fun.md  insurance_trend_and_impact.md  insurance_why_you_should_buy.md  prompt_engineering_handbook_for_executives.md  tax_the_truth_the_ugly_and_the_mandatory.md
celery_workers/: agents_demo.py  controller.py  tasks.py
frontend/: frontend.py  pyproject.toml
package/components/: content_icon_bars.py  navbar.py
package/database/: base.py  session.py  user.py  utils.py  web_register.py
pages/: 2_chunks.py  3_summary.py  4_publish.py
searxng/: settings.yml
(+112 files in other folders)
